name:                crypto
version:             0.1.0.0
synopsis:            Implementations of various cryptographic standards
description:         Implementations of various cryptographic standards
homepage:            https://github.com/nickspinale/crypto
bug-reports:         https://github.com/nickspinale/crypto/issues
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:           
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Crypto.Cipher.DSA
    Crypto.Cipher.RC4
    Numeric.Modulus

  build-depends:
    base >=4.8 && <4.9,
    integer-gmp,
    array,
    bytestring

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs

